versions/GNDS-v2.0/GNDS/c/src/v2.0/top/ReactionSuite.h

// --- Const-aware handles.
typedef const struct ReactionSuiteClass *const ConstHandle2ConstReactionSuite;
typedef       struct ReactionSuiteClass *const ConstHandle2ReactionSuite;
typedef const struct ReactionSuiteClass *      Handle2ConstReactionSuite;
typedef       struct ReactionSuiteClass *      Handle2ReactionSuite;
// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstReactionSuite
ReactionSuiteDefaultConst();
// +++ Create, default
extern_c Handle2ReactionSuite
ReactionSuiteDefault();
// --- Create, general, const
extern_c Handle2ConstReactionSuite
ReactionSuiteCreateConst(
   const char *const projectile,
   const char *const target,
   const char *const evaluation,
   const char *const format,
   const char *const projectileFrame,
   const char *const interaction,
   ConstHandle2ConstStyles styles,
   ConstHandle2ConstPoPs PoPs,
   ConstHandle2ConstReactions reactions,
   ConstHandle2ConstApplicationData applicationData,
   ConstHandle2ConstExternalFiles externalFiles,
   ConstHandle2ConstResonances resonances,
   ConstHandle2ConstSums sums,
   ConstHandle2ConstProductions productions,
   ConstHandle2ConstFissionComponents fissionComponents,
   ConstHandle2ConstOrphanProducts orphanProducts,
   ConstHandle2ConstIncompleteReactions incompleteReactions
);
// +++ Create, general
extern_c Handle2ReactionSuite
ReactionSuiteCreate(
   const char *const projectile,
   const char *const target,
   const char *const evaluation,
   const char *const format,
   const char *const projectileFrame,
   const char *const interaction,
   ConstHandle2ConstStyles styles,
   ConstHandle2ConstPoPs PoPs,
   ConstHandle2ConstReactions reactions,
   ConstHandle2ConstApplicationData applicationData,
   ConstHandle2ConstExternalFiles externalFiles,
   ConstHandle2ConstResonances resonances,
   ConstHandle2ConstSums sums,
   ConstHandle2ConstProductions productions,
   ConstHandle2ConstFissionComponents fissionComponents,
   ConstHandle2ConstOrphanProducts orphanProducts,
   ConstHandle2ConstIncompleteReactions incompleteReactions
);
// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
ReactionSuiteAssign(ConstHandle2ReactionSuite self, ConstHandle2ConstReactionSuite from);
// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
ReactionSuiteDelete(ConstHandle2ConstReactionSuite self);
// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
ReactionSuiteRead(ConstHandle2ReactionSuite self, const char *const filename);
// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
ReactionSuiteWrite(ConstHandle2ConstReactionSuite self, const char *const filename);
// +++ Print to standard output, in our prettyprinting format
extern_c int
ReactionSuitePrint(ConstHandle2ConstReactionSuite self);
// +++ Print to standard output, as XML
extern_c int
ReactionSuitePrintXML(ConstHandle2ConstReactionSuite self);
// +++ Print to standard output, as JSON
extern_c int
ReactionSuitePrintJSON(ConstHandle2ConstReactionSuite self);
// -----------------------------------------------------------------------------
// Metadatum: projectile
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ReactionSuiteProjectileHas(ConstHandle2ConstReactionSuite self);
// +++ Get
// +++ Returns by value
extern_c const char *
ReactionSuiteProjectileGet(ConstHandle2ConstReactionSuite self);
// +++ Set
extern_c void
ReactionSuiteProjectileSet(ConstHandle2ReactionSuite self, const char *const projectile);
// -----------------------------------------------------------------------------
// Metadatum: target
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ReactionSuiteTargetHas(ConstHandle2ConstReactionSuite self);
// +++ Get
// +++ Returns by value
extern_c const char *
ReactionSuiteTargetGet(ConstHandle2ConstReactionSuite self);
// +++ Set
extern_c void
ReactionSuiteTargetSet(ConstHandle2ReactionSuite self, const char *const target);
// -----------------------------------------------------------------------------
// Metadatum: evaluation
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ReactionSuiteEvaluationHas(ConstHandle2ConstReactionSuite self);
// +++ Get
// +++ Returns by value
extern_c const char *
ReactionSuiteEvaluationGet(ConstHandle2ConstReactionSuite self);
// +++ Set
extern_c void
ReactionSuiteEvaluationSet(ConstHandle2ReactionSuite self, const char *const evaluation);
// -----------------------------------------------------------------------------
// Metadatum: format
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ReactionSuiteFormatHas(ConstHandle2ConstReactionSuite self);
// +++ Get
// +++ Returns by value
extern_c const char *
ReactionSuiteFormatGet(ConstHandle2ConstReactionSuite self);
// +++ Set
extern_c void
ReactionSuiteFormatSet(ConstHandle2ReactionSuite self, const char *const format);
// -----------------------------------------------------------------------------
// Metadatum: projectileFrame
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ReactionSuiteProjectileFrameHas(ConstHandle2ConstReactionSuite self);
// +++ Get
// +++ Returns by value
extern_c const char *
ReactionSuiteProjectileFrameGet(ConstHandle2ConstReactionSuite self);