versions/GNDS-v2.0/GNDS/fortran/src/v2.0/top/ReactionSuite.f03


!! THIS FILE WAS AUTOGENERATED!
!! DO NOT MODIFY!

module topReactionSuite
use iso_c_binding
interface


!! -----------------------------------------------------------------------------
!! Basics
!! Create, Assign, Delete
!! -----------------------------------------------------------------------------

!! Create, default, const
function ReactionSuiteDefaultConst() &
      bind(C, name='ReactionSuiteDefaultConst') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function ReactionSuiteDefaultConst

!! Create, default
function ReactionSuiteDefault() &
      bind(C, name='ReactionSuiteDefault') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function ReactionSuiteDefault

!! Create, general, const
function ReactionSuiteCreateConst( &
   projectile, &
   target, &
   evaluation, &
   format, &
   projectileFrame, &
   interaction, &
   styles, &
   PoPs, &
   reactions, &
   applicationData, &
   externalFiles, &
   resonances, &
   sums, &
   productions, &
   fissionComponents, &
   orphanProducts, &
   incompleteReactions, &
   projectileSize, &
   targetSize, &
   evaluationSize, &
   formatSize, &
   projectileFrameSize, &
   interactionSize &
) &
      bind(C, name='ReactionSuiteCreateConst') &
      result(handle)
   use iso_c_binding
   implicit none
   integer(c_size_t), intent(in), value :: projectileSize
   character(c_char), intent(in) :: projectile(projectileSize)
   integer(c_size_t), intent(in), value :: targetSize
   character(c_char), intent(in) :: target(targetSize)
   integer(c_size_t), intent(in), value :: evaluationSize
   character(c_char), intent(in) :: evaluation(evaluationSize)
   integer(c_size_t), intent(in), value :: formatSize
   character(c_char), intent(in) :: format(formatSize)
   integer(c_size_t), intent(in), value :: projectileFrameSize
   character(c_char), intent(in) :: projectileFrame(projectileFrameSize)
   integer(c_size_t), intent(in), value :: interactionSize
   character(c_char), intent(in) :: interaction(interactionSize)
   type(c_ptr), value :: styles
   type(c_ptr), value :: PoPs
   type(c_ptr), value :: reactions
   type(c_ptr), value :: applicationData
   type(c_ptr), value :: externalFiles
   type(c_ptr), value :: resonances
   type(c_ptr), value :: sums
   type(c_ptr), value :: productions
   type(c_ptr), value :: fissionComponents
   type(c_ptr), value :: orphanProducts
   type(c_ptr), value :: incompleteReactions
   type(c_ptr) :: handle
end function ReactionSuiteCreateConst

!! Create, general
function ReactionSuiteCreate( &
   projectile, &
   target, &
   evaluation, &
   format, &
   projectileFrame, &
   interaction, &
   styles, &
   PoPs, &
   reactions, &
   applicationData, &
   externalFiles, &
   resonances, &
   sums, &
   productions, &
   fissionComponents, &
   orphanProducts, &
   incompleteReactions, &
   projectileSize, &
   targetSize, &
   evaluationSize, &
   formatSize, &
   projectileFrameSize, &
   interactionSize &
) &
      bind(C, name='ReactionSuiteCreate') &
      result(handle)
   use iso_c_binding
   implicit none
   integer(c_size_t), intent(in), value :: projectileSize
   character(c_char), intent(in) :: projectile(projectileSize)
   integer(c_size_t), intent(in), value :: targetSize
   character(c_char), intent(in) :: target(targetSize)
   integer(c_size_t), intent(in), value :: evaluationSize
   character(c_char), intent(in) :: evaluation(evaluationSize)
   integer(c_size_t), intent(in), value :: formatSize
   character(c_char), intent(in) :: format(formatSize)
   integer(c_size_t), intent(in), value :: projectileFrameSize
   character(c_char), intent(in) :: projectileFrame(projectileFrameSize)
   integer(c_size_t), intent(in), value :: interactionSize
   character(c_char), intent(in) :: interaction(interactionSize)
   type(c_ptr), value :: styles
   type(c_ptr), value :: PoPs
   type(c_ptr), value :: reactions
   type(c_ptr), value :: applicationData
   type(c_ptr), value :: externalFiles
   type(c_ptr), value :: resonances
   type(c_ptr), value :: sums
   type(c_ptr), value :: productions
   type(c_ptr), value :: fissionComponents
   type(c_ptr), value :: orphanProducts
   type(c_ptr), value :: incompleteReactions
   type(c_ptr) :: handle
end function ReactionSuiteCreate

!! Assign
subroutine ReactionSuiteAssign(handleLHS, handleRHS) &
      bind(C, name='ReactionSuiteAssign')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handleLHS, handleRHS
end subroutine ReactionSuiteAssign

!! Delete
subroutine ReactionSuiteDelete(handle) &
      bind(C, name='ReactionSuiteDelete')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine ReactionSuiteDelete


!! -----------------------------------------------------------------------------
!! I/O
!! Read, Write, Print
!! Each returns 0 if failure, 1 if success.
!! -----------------------------------------------------------------------------

!! Read from file
function ReactionSuiteRead(handle, filename, filenameSize) &
      bind(C, name='ReactionSuiteRead') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function ReactionSuiteRead

!! Write to file
function ReactionSuiteWrite(handle, filename, filenameSize) &
      bind(C, name='ReactionSuiteWrite') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function ReactionSuiteWrite

!! Print to standard output, in our prettyprinting format
function ReactionSuitePrint(handle) &
      bind(C, name='ReactionSuitePrint') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function ReactionSuitePrint

!! Print to standard output, as XML
function ReactionSuitePrintXML(handle) &
      bind(C, name='ReactionSuitePrintXML') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function ReactionSuitePrintXML

!! Print to standard output, as JSON
function ReactionSuitePrintJSON(handle) &
      bind(C, name='ReactionSuitePrintJSON') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function ReactionSuitePrintJSON


!! -----------------------------------------------------------------------------
!! Metadatum: projectile
!! -----------------------------------------------------------------------------

!! Has
function ReactionSuiteProjectileHas(handle) &
      bind(C, name='ReactionSuiteProjectileHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function ReactionSuiteProjectileHas

!! Get
function ReactionSuiteProjectileGet(handle) &
      bind(C, name='ReactionSuiteProjectileGet') &
      result(projectile)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: projectile
end function ReactionSuiteProjectileGet

!! Set
subroutine ReactionSuiteProjectileSet(handle, projectile, projectileSize) &
      bind(C, name='ReactionSuiteProjectileSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: projectileSize
   character(c_char), intent(in) :: projectile(projectileSize)
end subroutine ReactionSuiteProjectileSet


!! -----------------------------------------------------------------------------
!! Metadatum: target
!! -----------------------------------------------------------------------------

!! Has
function ReactionSuiteTargetHas(handle) &
      bind(C, name='ReactionSuiteTargetHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function ReactionSuiteTargetHas

!! Get
function ReactionSuiteTargetGet(handle) &
      bind(C, name='ReactionSuiteTargetGet') &
      result(target)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: target
end function ReactionSuiteTargetGet

!! Set
subroutine ReactionSuiteTargetSet(handle, target, targetSize) &
      bind(C, name='ReactionSuiteTargetSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: targetSize
   character(c_char), intent(in) :: target(targetSize)
end subroutine ReactionSuiteTargetSet


!! -----------------------------------------------------------------------------
!! Metadatum: evaluation
!! -----------------------------------------------------------------------------

!! Has
function ReactionSuiteEvaluationHas(handle) &
      bind(C, name='ReactionSuiteEvaluationHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function ReactionSuiteEvaluationHas

!! Get
function ReactionSuiteEvaluationGet(handle) &
      bind(C, name='ReactionSuiteEvaluationGet') &
      result(evaluation)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: evaluation
end function ReactionSuiteEvaluationGet

!! Set
subroutine ReactionSuiteEvaluationSet(handle, evaluation, evaluationSize) &
      bind(C, name='ReactionSuiteEvaluationSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: evaluationSize
   character(c_char), intent(in) :: evaluation(evaluationSize)
end subroutine ReactionSuiteEvaluationSet


!! -----------------------------------------------------------------------------
!! Metadatum: format
!! -----------------------------------------------------------------------------

!! Has
function ReactionSuiteFormatHas(handle) &
      bind(C, name='ReactionSuiteFormatHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function ReactionSuiteFormatHas

!! Get
function ReactionSuiteFormatGet(handle) &
      bind(C, name='ReactionSuiteFormatGet') &
      result(format)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: format
end function ReactionSuiteFormatGet

!! Set
subroutine ReactionSuiteFormatSet(handle, format, formatSize) &
      bind(C, name='ReactionSuiteFormatSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: formatSize
   character(c_char), intent(in) :: format(formatSize)
end subroutine ReactionSuiteFormatSet


!! -----------------------------------------------------------------------------
!! Metadatum: projectileFrame
!! -----------------------------------------------------------------------------

!! Has
function ReactionSuiteProjectileFrameHas(handle) &
      bind(C, name='ReactionSuiteProjectileFrameHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function ReactionSuiteProjectileFrameHas

!! Get
function ReactionSuiteProjectileFrameGet(handle) &
      bind(C, name='ReactionSuiteProjectileFrameGet') &
      result(projectileFrame)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: projectileFrame
end function ReactionSuiteProjectileFrameGet
